<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetWear</string>

    <string name="sign_in">Sign in to your Twitter account</string>

    <string name="loading_account">Loading account name&#8230;</string>
    <string name="error_account">Failed to load account name</string>
    <string name="notice_access_token">Please renew your access token to use new features</string>

    <string name="refresh_title">Refresh interval</string>
    <string name="unknown_interval">Unknown interval</string>
    <array name="refresh_intervals">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
    </array>

    <string name="sync_now">Check for new Tweets now</string>
    <string name="sync_demo">Create a demo Tweet</string>
    <string name="clear_existing">Clear existing Tweets</string>

    <string name="error_authorization">Failed to request authorization</string>

    <string name="about_version">
        &lt;html&gt;Version &lt;b&gt;%1$s&lt;/b&gt; by &lt;i&gt;rycus86&lt;/i&gt;&lt;/html&gt;
    </string>
    <string name="about_notice">Click for issues or suggestions</string>
    <string name="about_link">https://github.com/rycus86/TweetWear/issues</string>

    <string name="error_access_token_save">Failed to save access token</string>

    <string name="loading">Loading&#8230;</string>

    <string name="nothing_selected">Nothing selected</string>

    <string name="timeline">Timeline</string>

    <string name="lists_header">Select lists</string>
    <string name="lists_empty">No lists found</string>

    <string name="lists_subscribed">Subscribed</string>
    <string name="lists_owned">Owned</string>

    <string name="pref_lists">Lists</string>
    <plurals name="pref_list_summary_lists">
        <item quantity="one">1 list</item>
        <item quantity="other">%1$d lists</item>
    </plurals>

    <string name="error_load_lists">Failed to load lists</string>

    <string name="pref_header_account">Account</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_header_synchronization">Synchronization</string>
    <string name="pref_header_about">About</string>

    <string name="pref_dialog_interval">Select refresh interval</string>

    <string name="vibrate">Vibrate</string>
    <string name="pref_mark_as_read">Mark as read on delete</string>
    <string name="pref_mark_as_read_on">Show only new tweets</string>
    <string name="pref_mark_as_read_off">Always show the last 10 Tweet</string>

    <string name="read_later">Read it later</string>
    <string name="read_later_empty">No pages saved</string>
    <string name="open_link">Open link</string>
    <string name="archive_page">Archive</string>
    <string name="show_archives">Archived pages</string>
    <string name="no_archives">No archived pages</string>
    <string name="menu_delete_all">Delete all</string>

    <string name="promo_title">What\'s new?</string>

</resources>
